Fix hamburger menu on mobile

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -28,6 +28,11 @@ body {
     color: $site;
     z-index: 10;
   }
+  &-header {
+    @media screen and (max-width: 640px) {
+      min-height: 48px;
+    }
+  }
 }
 
 .navigation {
@@ -37,10 +42,23 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+
+    @media screen and (max-width: 640px) {
+      display: none;
+      flex-direction: column;
+    }
+
+    &--visible {
+      display: flex;
+    }
   }
   &__item {
     display: block;
     margin: 0 16px;
+
+    @media screen and (max-width: 640px) {
+      margin: 16px;
+    }
   }
   &__link {
     color: $link;
@@ -57,7 +75,7 @@ body {
       display: none;
     }
 
-    @media screen and (min-width: 640px) and (max-width: 960px){
+    @media screen and (min-width: 640px) and (max-width: 960px) {
       display: none;
     }
   }
@@ -131,7 +149,7 @@ body {
     grid-template-columns: 1fr 1fr;
   }
 
-  @media screen and (min-width: 960px){
+  @media screen and (min-width: 960px) {
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
